--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,10 @@ a:focus {
   color: #ffffff;
 }
 
+ul li {
+  list-style: none;
+}
+
 ul,
 ol {
   padding: 0;
@@ -94,6 +98,7 @@ ol {
   overflow: hidden;
 }
 
+.header .container-fluid,
 .blog .container-fluid {
   padding: 0;
 }
@@ -251,238 +256,37 @@ ol {
 /*---------------------
   Header
 -----------------------*/
+.navbar {
+  padding: .5rem 1.2rem !important;
+}
+
+.brand__logo {
+  padding: 0;
+}
+
+.brand__logo img {
+  height: 35px;
+}
 
 .header {
   background: #ffffff;
-}
-
-.header__top {
-  background: #000000;
-  padding: 10px 0;
-}
-
-.header__top__left p {
-  color: #ffffff;
-  margin-bottom: 0;
-}
-
-.header__top__right {
-  text-align: right;
-  color: #ffffff;
-}
-
-.header__top__links {
-  display: inline-block;
-  margin-right: 25px;
-}
-
-.header__top__links a {
-  color: #ffffff;
-  font-size: 13px;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  margin-right: 28px;
-  display: inline-block;
-}
-
-.header__top__links a:last-child {
-  margin-right: 0;
-}
-
-.header__top__hover {
-  display: inline-block;
-  position: relative;
-}
-
-.header__top__hover:hover ul {
-  top: 24px;
-  opacity: 1;
-  visibility: visible;
-}
-
-.header__top__hover span i {
-  font-size: 20px;
-  position: relative;
-  top: 3px;
-  right: 2px;
-}
-
-.header__top__hover ul {
-  background: #ffffff;
-  display: inline-block;
-  padding: 2px 0;
-  position: absolute;
-  left: 0;
-  top: 44px;
-  opacity: 0;
-  visibility: hidden;
-  z-index: 3;
-  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-  -webkit-transition: all, 0.3s;
-  -o-transition: all, 0.3s;
-  transition: all, 0.3s;
-}
-
-.header__top__hover ul li {
-  list-style: none;
-  font-size: 13px;
-  color: #000000;
-  padding: 2px 15px;
-  cursor: pointer;
-}
-
-.header__logo a {
-  display: inline-block;
-}
-
-.header__menu {
-  text-align: center;
-  padding: 26px 0 25px;
-}
-
-.header__menu ul li {
-  list-style: none;
-  display: inline-block;
-  margin-right: 45px;
-  position: relative;
-}
-
-.header__menu ul li.active a:after {
-  -webkit-transform: scale(1);
-  -ms-transform: scale(1);
-  transform: scale(1);
-}
-
-.header__menu ul li:hover a:after {
-  -webkit-transform: scale(1);
-  -ms-transform: scale(1);
-  transform: scale(1);
-}
-
-.header__menu ul li:hover .dropdown {
-  top: 32px;
-  opacity: 1;
-  visibility: visible;
-}
-
-.header__menu ul li:last-child {
-  margin-right: 0;
-}
-
-.header__menu ul li .dropdown {
-  position: absolute;
-  left: 0;
-  top: 56px;
-  width: 150px;
-  background: #000000;
-  text-align: left;
-  padding: 5px 0;
-  z-index: 9;
-  opacity: 0;
-  visibility: hidden;
-  -webkit-transition: all, 0.3s;
-  -o-transition: all, 0.3s;
-  transition: all, 0.3s;
-}
-
-.header__menu ul li .dropdown li {
-  display: block;
-  margin-right: 0;
-}
-
-.header__menu ul li .dropdown li a {
-  font-size: 14px;
-  color: #ffffff;
-  font-weight: 400;
-  padding: 5px 20px;
-  text-transform: capitalize;
-}
-
-.header__menu ul li .dropdown li a:after {
-  display: none;
-}
-
-.header__menu ul li a {
-  font-size: 18px;
-  color: #000000;
-  display: block;
-  font-weight: 600;
-  position: relative;
-  padding: 3px 0;
-}
-
-.header__menu ul li a:after {
-  position: absolute;
-  left: 0;
-  bottom: 0;
+  position: fixed;
+  z-index: 9999;
   width: 100%;
-  height: 2px;
-  background: #844932;
-  content: "";
-  -webkit-transition: all, 0.5s;
-  -o-transition: all, 0.5s;
-  transition: all, 0.5s;
-  -webkit-transform: scale(0);
-  -ms-transform: scale(0);
-  transform: scale(0);
+  box-shadow: 1px 1px 5px gray;
 }
 
-.header__nav__option {
-  text-align: right;
-  padding: 30px 0;
-}
-
-.header__nav__option a {
-  display: inline-block;
-  margin-right: 16px;
-  position: relative;
-}
-
-.header__nav__option a span {
-  color: #0d0d0d;
-  font-size: 11px;
-  position: absolute;
-  left: 9px;
-  top: 10px;
-}
-
-.header__nav__option a:last-child {
-  margin-right: 0;
-}
-
-.header__nav__option .price {
-  font-size: 15px;
-  color: #000000;
-  font-weight: 700;
-  display: inline-block;
-  margin-left: -20px;
-  position: relative;
-  top: 3px;
-}
-
-.offcanvas-menu-wrapper {
-  display: none;
-}
-
-.canvas__open {
-  display: none;
+.dropdown-menu {
+  border-radius: 0;
+  margin: 0;
 }
 
 /*custom bootstrap navigation */
-
 .customNav .container {
   padding-left: 0;
 }
 
 .custom-nav {
-  background: #844932;
-  background-repeat: repeat-x;
-  position: sticky;
-  position: -webkit-sticky;
-  top: 0;
-  padding: 10px 0;
-  height: 60px;
   z-index: 9999;
   width: 100%;
 }
@@ -510,7 +314,7 @@ ol {
   border-radius: 3px;
   width: 28px;
   height: 3px;
-  background-color: #ffffff;
+  background-color: #000000;
   display: block;
   margin: 5px 0;
   -moz-transition: all ease-in-out 0.3s;
@@ -571,14 +375,17 @@ ol {
 
 .custom-nav .navbar-nav .nav-item > .nav-link {
   font-size: 1rem;
-  color: rgba(255, 255, 255, 0.9);
-  font-weight: 500;
-  padding: 5px 22px;
+  padding: 0px 5px;
+  margin-left: 5px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 .custom-nav .navbar-nav .nav-item:hover > .nav-link,
 .custom-nav .navbar-nav .nav-item.active > .nav-link {
-  color: #ffffff;
+  color: #000000;
+  font-weight: bold;
+  border-bottom: 1px solid black;
 }
 
 .custom-nav .navbar-nav .nav-item.dropdown > .dropdown-menu {
@@ -601,23 +408,90 @@ ol {
   color: #844932;
 }
 
-.custom-nav .navbar-nav .nav-item.dropdown > .dropdown-menu:before {
-  content: '';
-  position: absolute;
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-  border-bottom: 10px solid #fff;
-  bottom: calc(100% - 2px);
-  left: 22px;
+.dropdown-item {
+  color: #999999;
+}
+
+.megamenu .row {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.megamenu__title {
+  padding: 5px 0;
+  color: #f9f9f9;
+}
+
+.megamenu__link {
+  color: #999;
+}
+
+.megamenu__link:hover {
+  color: #666666;
+}
+
+.header__nav__link a img {
+  height: 18px;
+}
+
+.price {
+  color: #111111;
+}
+
+.nav__link__item {
+  padding-left: 5px;
+}
+
+.header__nav__link.navbar-brand {
+  margin-right: 0;
+}
+
+@media all and (min-width: 768px) {
+  .nav__link__item {
+    padding-left: 15px;
+  }
+}
+
+@media all and (min-width: 992px) {
+  .navbar {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .navbar .has-megamenu {
+    position: static !important;
+  }
+  .navbar .megamenu {
+    left: 0;
+    right: 0;
+    width: 100%;
+    padding: 20px;
+  }
+  .navbar .nav-link {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+  .megamenu__title {
+    color: #454545;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .header {
+    padding-top: 10px;
+  }
+  .padding__zero__small {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .header__nav__option {
+    text-align: right;
+    padding: 10px 0;
+  }
 }
 
 @media only screen and (max-width: 1199px) {
   .custom-nav .navbar-collapse {
     left: 50px;
-  }
-  .custom-nav .navbar-nav .nav-item {
-    display: inline-block;
-    margin: 0 8px;
   }
   .custom-nav .navbar-nav .nav-item > .nav-link {
     font-size: 1rem;
@@ -646,6 +520,10 @@ ol {
     background-color: transparent;
     color: #844932;
   }
+  .custom-nav .navbar-nav .nav-item {
+    display: inline-block;
+    margin: 0 8px;
+  }
 }
 
 @media only screen and (max-width: 991px) {
@@ -664,8 +542,8 @@ ol {
     height: 100vh;
     width: 250px;
     top: 0;
-    right: -250px;
-    left: auto;
+    right: auto;
+    left: -250px;
     overflow-y: auto;
     z-index: 999;
     opacity: 0;
@@ -676,7 +554,7 @@ ol {
   .custom-nav .navbar-collapse.show {
     visibility: visible;
     opacity: 1;
-    right: 0;
+    left: 0;
   }
   .custom-nav .navbar-nav .nav-item.dropdown > .dropdown-menu {
     background-color: #444444;
@@ -720,6 +598,10 @@ ol {
     cursor: pointer;
     display: block;
   }
+  .custom-nav .navbar-nav .nav-item:hover > .nav-link,
+  .custom-nav .navbar-nav .nav-item.active > .nav-link {
+    color: #fff;
+  }
 }
 
 /*---------------------
@@ -752,12 +634,13 @@ ol {
 }
 
 .hero__items {
-  height: 100vh;
+  margin-top: 55px;
+  height: calc(100vh - 55px);
 }
 
 .hero__text h2 {
   color: #ffffff;
-  font-size: 38px;
+  font-size: 45px;
   font-weight: 700;
   line-height: 58px;
   margin-bottom: 30px;
@@ -833,7 +716,7 @@ ol {
   }
 
   .img__right {
-    right: 45px;
+    right: 30px;
   }
 }
 
@@ -2794,209 +2677,81 @@ label span {
 /*---------------------
   Checkout
 -----------------------*/
-
-.coupon__code {
-  color: #0d0d0d;
-  font-size: 14px;
-  border-top: 2px solid #77b527;
-  background: #f5f5f5;
-  padding: 23px 30px 18px;
-  margin-bottom: 50px;
-}
-
-.coupon__code span {
-  margin-right: 15px;
-}
-
-.coupon__code a {
-  color: #0d0d0d;
+.shopping__cart__heading {
+  padding: 20px 0;
+  letter-spacing: 3px;
 }
 
 .checkout__title {
-  color: #000000;
-  font-weight: 700;
-  text-transform: uppercase;
-  border-bottom: 1px solid #e1e1e1;
-  padding-bottom: 25px;
-  margin-bottom: 30px;
+  font-weight: bold;
 }
 
-.checkout__input {
-  margin-bottom: 6px;
-}
-
-.checkout__input p {
-  color: #000000;
-  margin-bottom: 12px;
-}
-
-.checkout__input p span {
-  color: #844932;
-}
-
-.checkout__input input {
-  height: 50px;
-  width: 100%;
-  border: 1px solid #000000;
-  font-size: 14px;
-  color: #000000;
-  padding-left: 20px;
-  margin-bottom: 20px;
-}
-
-.checkout__input input::-webkit-input-placeholder {
-  color: #b7b7b7;
-}
-
-.checkout__input input::-moz-placeholder {
-  color: #b7b7b7;
-}
-
-.checkout__input input:-ms-input-placeholder {
-  color: #b7b7b7;
-}
-
-.checkout__input input::-ms-input-placeholder {
-  color: #b7b7b7;
-}
-
-.checkout__input input::placeholder {
-  color: #b7b7b7;
-}
-
-.checkout__input__checkbox label {
-  font-size: 15px;
-  color: #000000;
-  position: relative;
-  padding-left: 30px;
-  cursor: pointer;
-  margin-bottom: 16px;
+.checkout__subtitle {
+  margin-bottom: 15px;
   display: block;
 }
 
-.checkout__input__checkbox label input {
-  position: absolute;
-  visibility: hidden;
+.col__first {
+  padding-right: 0;
 }
 
-.checkout__input__checkbox label input:checked ~ .checkmark {
-  border-color: #844932;
+.col__last {
+  padding-left: 0;
 }
 
-.checkout__input__checkbox label input:checked ~ .checkmark:after {
-  opacity: 1;
-}
-
-.checkout__input__checkbox label .checkmark {
-  position: absolute;
-  left: 0;
-  top: 3px;
-  height: 14px;
-  width: 14px;
-  border: 1.5px solid #000000;
-  content: "";
-  border-radius: 2px;
-}
-
-.checkout__input__checkbox label .checkmark:after {
-  position: absolute;
-  left: 1px;
-  top: -3px;
-  width: 14px;
-  height: 7px;
-  border: solid #000000;
-  border-width: 1.5px 1.5px 0px 0px;
-  -webkit-transform: rotate(127deg);
-  -ms-transform: rotate(127deg);
-  transform: rotate(127deg);
-  content: "";
-  opacity: 0;
-}
-
-.checkout__input__checkbox p {
-  color: #0d0d0d;
-  font-size: 14px;
-  line-height: 24px;
-  margin-bottom: 22px;
-}
-
-.checkout__order {
-  background: #f3f2ee;
-  padding: 30px;
-}
-
-.checkout__order .order__title {
-  color: #000000;
-  font-weight: 700;
-  text-transform: uppercase;
-  border-bottom: 1px solid #d7d7d7;
-  padding-bottom: 25px;
-  margin-bottom: 30px;
-}
-
-.checkout__order p {
-  color: #444444;
-  font-size: 16px;
-  line-height: 28px;
-}
-
-.checkout__order .site-btn {
+.checkout__input input {
+  height: 60px;
   width: 100%;
-  margin-top: 8px;
-}
-
-.checkout__order__products {
-  font-size: 16px;
+  border: 1px solid #000000;
+  border-bottom: none;
+  border-radius: none;
+  font-size: 14px;
   color: #000000;
-  overflow: hidden;
-  margin-bottom: 18px;
+  padding-left: 20px;
 }
 
-.checkout__order__products span {
-  float: right;
-}
-
-.checkout__total__products {
-  margin-bottom: 20px;
-}
-
-.checkout__total__products li {
+.checkout__input input::placeholder {
   font-size: 16px;
-  color: #444444;
-  list-style: none;
-  line-height: 26px;
-  overflow: hidden;
-  margin-bottom: 15px;
+  padding-left: 3px;
+  letter-spacing: 1px;
 }
 
-.checkout__total__products li:last-child {
-  margin-bottom: 0;
+.checkout__input input {
+  font-size: 18px;
 }
 
-.checkout__total__products li span {
-  color: #000000;
-  float: right;
+.bottom__border__none {
+  border-bottom: none !important;
 }
 
-.checkout__total__all {
-  border-top: 1px solid #d7d7d7;
-  border-bottom: 1px solid #d7d7d7;
-  padding: 15px 0;
-  margin-bottom: 26px;
+.shopping__cart__checkout form .row div .checkout__input:last-child {
+  border-bottom: 1px solid black;
 }
 
-.checkout__total__all li {
-  list-style: none;
-  font-size: 16px;
-  color: #000000;
-  line-height: 40px;
-  overflow: hidden;
+.btn__submit input {
+  margin-top: 15px;
+  width: 100%;
+  height: 50px;
+  color: #fff;
+  background-color: #000000;
+  border-radius: none;
+  border: none;
 }
 
-.checkout__total__all li span {
-  color: #844932;
-  font-weight: 700;
-  float: right;
+.btn__submit input:hover {
+  background-color: #844932;
+}
+
+@media (max-width: 992px) {
+  .col__first {
+    padding: 0 15px !important;
+  }
+
+  .col__last {
+    margin: 0 15px !important;
+    padding-right: 0;
+    border-left: 1px solid;
+  }
 }
 
 /*---------------------
