--- a/css/style.css
+++ b/css/style.css
@@ -253,9 +253,19 @@ ol {
   justify-content: center;
 }
 
+.nav__fixer {
+  height: 55px;
+  width: 100%;
+}
+
 /*---------------------
   Header
 -----------------------*/
+.hero__items {
+  /* margin-top: 55px; */
+  height: calc(100vh - 55px);
+}
+
 .navbar {
   padding: .5rem 1.2rem !important;
 }
@@ -631,11 +641,6 @@ ol {
 .hero__slider.owl-carousel .owl-nav button.owl-next {
   left: auto;
   right: 75px;
-}
-
-.hero__items {
-  margin-top: 55px;
-  height: calc(100vh - 55px);
 }
 
 .hero__text h2 {
@@ -1358,7 +1363,7 @@ label span {
 -------------- */
 
 .story__slider {
-  height: 70vh;
+  /* height: 70vh; */
 }
 
 .story__slider .hero__items {
@@ -1761,9 +1766,8 @@ label span {
 
 .product__details__pic {
   text-align: center;
-  background: #f3f2ee;
-  padding: 40px 0 60px;
-  margin-bottom: 100px;
+  /* padding: 40px 0 60px;
+  margin-bottom: 50px; */
 }
 
 .product__details__pic .nav-tabs {
@@ -2678,7 +2682,7 @@ label span {
   Checkout
 -----------------------*/
 .shopping__cart__heading {
-  padding: 20px 0;
+  /* padding: 20px 0; */
   letter-spacing: 3px;
 }
 
@@ -2760,7 +2764,7 @@ label span {
 .blog__heading {
   text-align: center;
   font-size: 46px;
-  margin: 80px auto 20px auto;
+  /* margin: 20px auto 20px auto; */
 }
 
 .blog__body {
