--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,10 @@ ol {
   color: #fff;
   font-size: 14px;
 }
+
+.dropdown-toggle::after {
+  display: none;
+}
 /* --------------------
   Helper CSS
 -----------------------*/
@@ -389,19 +393,23 @@ ol {
   margin-left: 5px;
   text-transform: uppercase;
   letter-spacing: 1px;
+  color: #444444;
+  font-weight: bold;
+}
+
+.nav-link.dropdown-toggle {
+  position: relative;
 }
 
 .custom-nav .navbar-nav .nav-item:hover > .nav-link,
 .custom-nav .navbar-nav .nav-item.active > .nav-link {
   color: #000000;
-  font-weight: bold;
-  border-bottom: 1px solid black;
 }
 
 .custom-nav .navbar-nav .nav-item.dropdown > .dropdown-menu {
   border: none;
-  -webkit-box-shadow: 0 0 40px rgba(82, 85, 90, .3);
-  box-shadow: 0 0 40px rgba(82, 85, 90, .3);
+  -webkit-box-shadow: 0 1px 1px rgba(82, 85, 90, .3);
+  box-shadow: 0 1px 1px rgba(82, 85, 90, .3);
   position: absolute;
   min-width: 200px;
   display: block;
@@ -427,17 +435,47 @@ ol {
   margin-right: 0;
 }
 
+.has-megamenu .nav-link.dropdown-toggle {
+  text-transform: uppercase;
+  letter-spacing: 1.1px;
+}
+
 .megamenu__title {
-  padding: 5px 0;
-  color: #f9f9f9;
+  padding: 10px;
+  padding-left: 0;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #ffffff;
 }
 
 .megamenu__link {
+  position: relative;
   color: #999;
+  text-transform: capitalize;
+  margin: 15px 0;
 }
 
 .megamenu__link:hover {
-  color: #666666;
+  color: #844932;
+}
+
+.reverse__underline__animation::after {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  content: '';
+  width: 0;
+  height: 1px;
+  border-bottom: 1px solid black;
+  -webkit-transition: width .4s;
+  -o-transition: width .4s;
+  transition: width .4s;
+}
+
+.reverse__underline__animation:hover::after {
+  width: 100%;
+  left: 0;
+  right: auto;
 }
 
 .header__nav__link a img {
@@ -481,7 +519,19 @@ ol {
     padding-bottom: 1rem;
   }
   .megamenu__title {
-    color: #454545;
+    color: #000000;
+    letter-spacing: 1px;
+  }
+  .megamenu__link .reverse__underline__animation {
+    color: #000000;
+    letter-spacing: 1px;
+  }
+  .megamenu__item {
+    padding: 4px 0;
+  }
+  .megamenu__image a img {
+    width: 100%;
+    height: 200px;
   }
 }
 
@@ -532,7 +582,7 @@ ol {
   }
   .custom-nav .navbar-nav .nav-item {
     display: inline-block;
-    margin: 0 8px;
+    margin: 0 2px;
   }
 }
 
@@ -611,6 +661,9 @@ ol {
   .custom-nav .navbar-nav .nav-item:hover > .nav-link,
   .custom-nav .navbar-nav .nav-item.active > .nav-link {
     color: #fff;
+  }
+  .megamenu__image {
+    display: none;
   }
 }
 
@@ -1512,8 +1565,9 @@ label span {
 .shop__sidebar__categories ul li a,
 .shop__sidebar__price ul li a,
 .shop__sidebar__brand ul li a {
-  color: #b7b7b7;
+  color: rgba(0, 0, 0, 0.5);
   font-size: 15px;
+  font-weight: bold;
   line-height: 32px;
   -webkit-transition: all, 0.3s;
   -o-transition: all, 0.3s;
@@ -1523,7 +1577,7 @@ label span {
 .shop__sidebar__categories ul li a:hover,
 .shop__sidebar__price ul li a:hover,
 .shop__sidebar__brand ul li a:hover {
-  color: #000000;
+  color: #844932;
 }
 
 .shop__sidebar__brand ul {
@@ -2681,81 +2735,209 @@ label span {
 /*---------------------
   Checkout
 -----------------------*/
-.shopping__cart__heading {
-  /* padding: 20px 0; */
-  letter-spacing: 3px;
+
+.coupon__code {
+  color: #0d0d0d;
+  font-size: 14px;
+  border-top: 2px solid #77b527;
+  background: #f5f5f5;
+  padding: 23px 30px 18px;
+  margin-bottom: 10px;
+}
+
+.coupon__code span {
+  margin-right: 15px;
+}
+
+.coupon__code a {
+  color: #0d0d0d;
 }
 
 .checkout__title {
-  font-weight: bold;
+  color: #000000;
+  font-weight: 700;
+  text-transform: uppercase;
+  border-bottom: 1px solid #e1e1e1;
+  padding-bottom: 25px;
+  margin-bottom: 10px;
 }
 
-.checkout__subtitle {
-  margin-bottom: 15px;
-  display: block;
+.checkout__input {
+  margin-bottom: 6px;
 }
 
-.col__first {
-  padding-right: 0;
+.checkout__input p {
+  color: #000000;
+  margin-bottom: 12px;
 }
 
-.col__last {
-  padding-left: 0;
+.checkout__input p span {
+  color: #844932;
 }
 
 .checkout__input input {
-  height: 60px;
+  height: 50px;
   width: 100%;
   border: 1px solid #000000;
-  border-bottom: none;
-  border-radius: none;
   font-size: 14px;
   color: #000000;
   padding-left: 20px;
+  /* margin-bottom: 20px; */
+}
+
+.checkout__input input::-webkit-input-placeholder {
+  color: #b7b7b7;
+}
+
+.checkout__input input::-moz-placeholder {
+  color: #b7b7b7;
+}
+
+.checkout__input input:-ms-input-placeholder {
+  color: #b7b7b7;
+}
+
+.checkout__input input::-ms-input-placeholder {
+  color: #b7b7b7;
 }
 
 .checkout__input input::placeholder {
+  color: #b7b7b7;
+}
+
+.checkout__input__checkbox label {
+  font-size: 15px;
+  color: #000000;
+  position: relative;
+  padding-left: 30px;
+  cursor: pointer;
+  margin-bottom: 16px;
+  display: block;
+}
+
+.checkout__input__checkbox label input {
+  position: absolute;
+  visibility: hidden;
+}
+
+.checkout__input__checkbox label input:checked ~ .checkmark {
+  border-color: #844932;
+}
+
+.checkout__input__checkbox label input:checked ~ .checkmark:after {
+  opacity: 1;
+}
+
+.checkout__input__checkbox label .checkmark {
+  position: absolute;
+  left: 0;
+  top: 3px;
+  height: 14px;
+  width: 14px;
+  border: 1.5px solid #000000;
+  content: "";
+  border-radius: 2px;
+}
+
+.checkout__input__checkbox label .checkmark:after {
+  position: absolute;
+  left: 1px;
+  top: -3px;
+  width: 14px;
+  height: 7px;
+  border: solid #000000;
+  border-width: 1.5px 1.5px 0px 0px;
+  -webkit-transform: rotate(127deg);
+  -ms-transform: rotate(127deg);
+  transform: rotate(127deg);
+  content: "";
+  opacity: 0;
+}
+
+.checkout__input__checkbox p {
+  color: #0d0d0d;
+  font-size: 14px;
+  line-height: 24px;
+  margin-bottom: 22px;
+}
+
+.checkout__order {
+  background: #f3f2ee;
+  padding: 30px;
+}
+
+.checkout__order .order__title {
+  color: #000000;
+  font-weight: 700;
+  text-transform: uppercase;
+  border-bottom: 1px solid #d7d7d7;
+  padding-bottom: 25px;
+  margin-bottom: 30px;
+}
+
+.checkout__order p {
+  color: #444444;
   font-size: 16px;
-  padding-left: 3px;
-  letter-spacing: 1px;
+  line-height: 28px;
 }
 
-.checkout__input input {
-  font-size: 18px;
-}
-
-.bottom__border__none {
-  border-bottom: none !important;
-}
-
-.shopping__cart__checkout form .row div .checkout__input:last-child {
-  border-bottom: 1px solid black;
-}
-
-.btn__submit input {
-  margin-top: 15px;
+.checkout__order .site-btn {
   width: 100%;
-  height: 50px;
-  color: #fff;
-  background-color: #000000;
-  border-radius: none;
-  border: none;
+  margin-top: 8px;
 }
 
-.btn__submit input:hover {
-  background-color: #844932;
+.checkout__order__products {
+  font-size: 16px;
+  color: #000000;
+  overflow: hidden;
+  margin-bottom: 18px;
 }
 
-@media (max-width: 992px) {
-  .col__first {
-    padding: 0 15px !important;
-  }
+.checkout__order__products span {
+  float: right;
+}
 
-  .col__last {
-    margin: 0 15px !important;
-    padding-right: 0;
-    border-left: 1px solid;
-  }
+.checkout__total__products {
+  margin-bottom: 20px;
+}
+
+.checkout__total__products li {
+  font-size: 16px;
+  color: #444444;
+  list-style: none;
+  line-height: 26px;
+  overflow: hidden;
+  margin-bottom: 15px;
+}
+
+.checkout__total__products li:last-child {
+  margin-bottom: 0;
+}
+
+.checkout__total__products li span {
+  color: #000000;
+  float: right;
+}
+
+.checkout__total__all {
+  border-top: 1px solid #d7d7d7;
+  border-bottom: 1px solid #d7d7d7;
+  padding: 15px 0;
+  margin-bottom: 26px;
+}
+
+.checkout__total__all li {
+  list-style: none;
+  font-size: 16px;
+  color: #000000;
+  line-height: 40px;
+  overflow: hidden;
+}
+
+.checkout__total__all li span {
+  color: #844932;
+  font-weight: 700;
+  float: right;
 }
 
 /*---------------------
@@ -3109,12 +3291,12 @@ label span {
 
 .contact__text .section-title {
   text-align: left;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 .contact__text .section-title h2 {
   font-size: 48px;
-  margin-bottom: 18px;
+  margin-bottom: 10px;
 }
 
 .contact__text .section-title p {
