--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,7 @@ ol {
 }
 
 .nav__fixer {
-  height: 55px;
+  height: 80px;
   width: 100%;
 }
 
@@ -268,7 +268,7 @@ ol {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #844932;
   color: #ffffff;
-  padding: 4px;
+  padding: 8px 15px;
 }
 #left {
   overflow: hidden;
@@ -296,7 +296,13 @@ ol {
 }
 
 .navbar {
-  padding: .5rem 1.2rem !important;
+  padding: 20px 15px;
+  min-height: 80px;
+  font-family: 'Poppins', sans-serif;
+}
+.navbar h1,
+.navbar h2, .navbar h3, .navbar h4, .navbar h5, .navbar h6 {
+  font-family: 'Poppins', sans-serif;
 }
 
 .brand__logo {
@@ -312,7 +318,7 @@ ol {
   position: fixed;
   z-index: 9999;
   width: 100%;
-  box-shadow: 1px 1px 5px gray;
+  box-shadow: 1px 1px 5px rgba(0,0,0,0.1);
 }
 
 .dropdown-menu {
@@ -416,10 +422,8 @@ ol {
   font-size: 1rem;
   padding: 0px 5px;
   margin-left: 5px;
-  text-transform: uppercase;
   letter-spacing: 1px;
   color: #444444;
-  font-weight: bold;
 }
 
 .nav-link.dropdown-toggle {
@@ -476,8 +480,8 @@ ol {
 .megamenu__link {
   position: relative;
   color: #999;
-  text-transform: capitalize;
   margin: 15px 0;
+  font-size: 0.875rem;
 }
 
 .megamenu__link:hover {
@@ -504,7 +508,7 @@ ol {
 }
 
 .header__nav__link a img {
-  height: 18px;
+  height: 22px;
 }
 
 .price {
@@ -555,7 +559,7 @@ ol {
     letter-spacing: 1px;
   }
   .megamenu__item {
-    padding: 4px 0;
+    padding: 6px 0;
   }
   .megamenu__image a img {
     width: 100%;
@@ -879,8 +883,8 @@ ol {
 .banner__item__text {
   max-width: 300px;
   position: absolute;
-  left: 0;
-  top: 140px;
+  right: 0;
+  top: 240px;
 }
 
 .banner__item__text h2 {
@@ -1134,11 +1138,11 @@ ol {
 
 .filter__controls li {
   color: #b7b7b7;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 700;
   list-style: none;
   display: inline-block;
-  margin-right: 88px;
+  margin-right: 28px;
   cursor: pointer;
 }
 
@@ -1346,8 +1350,8 @@ ol {
   font-size: 13px;
   font-weight: 700;
   letter-spacing: 2px;
-  width: 200px;
-  padding: 14px 30px;
+  min-width: 150px;
+  padding: 12px 16px;
   border: 1px solid #000000;
   color: #000000;
   text-align: center;
